cluster/apps/homarr/deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: homarr
  namespace: homarr
spec:
  replicas: 1
  strategy:
    type: RollingUpdate
  selector:
    matchLabels:
      app: homarr
  template:
    metadata:
      labels:
        app: homarr
    spec:
      containers:
        - name: homarr
          image: ghcr.io/homarr-labs/homarr:v1.77.2
          ports:
            - name: http
              containerPort: 7575
              protocol: TCP
          resources:
            requests:
              cpu: "100m"
              memory: "512Mi"
            limits:
              memory: "512Mi"
          volumeMounts:
            - name: appdata
              mountPath: /appdata
      volumes:
        - name: appdata
          persistentVolumeClaim:
            claimName: homarr-appdata-nfs
